--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author: Dustin B. Mazon
 
 # This URL is the main address for absolute links. Don't include a slash at the end.
 #
-url: ''
+url: 'http://arsexpert.com'
 baseurl: ''
 
 # This is for the editing function in _/includes/improve_content
